# sad2-vae

./: .gitignore  README.md  constants.py  data_exploration.ipynb  dataset.py  dimensionality_reduction.ipynb  latent_analysis.ipynb  pyproject.toml  run.py
model/: decoder.py  decoder_2.py  encoder.py  encoder_2.py  hvae.py  hvae2.py  latent_space.py
