[tool.poetry]
name = "sad2-vae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
opencv-python = "^4.8.1.78"
pandas = "^2.1.4"
pillow = "^10.1.0"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"
lightning = "^2.1.3"
typeguard = "^4.1.5"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.15.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
